--- a/HW3_sac820/Assignment3.ipynb
+++ b/HW3_sac820/Assignment3.ipynb
@@ -14,14 +14,151 @@
     "$$H_{0}: \\mu = \\mu_{0}$$\n",
     "$$H_{a}: \\mu \\neq \\mu_{0}$$\n",
     "\n",
-    "$$H_{a}: \\mu > \\mu_{0} \\textrm{ or } H_{a} \\mu < \\mu_{0}$$"
+    "$$H_{a}: \\mu > \\mu_{0} \\textrm{ or } H_{a}: \\mu < \\mu_{0}$$\n",
+    "\n",
+    "\n",
+    "<center>Our null hypothesis is that the time to do X is the same as time to do Y.<center>\n",
+    "<center>Our alternative hypothesis is that the time to do X is not the same as the time to do Y.<center>"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "$$\\alpha = .05$$"
+    "$$\\alpha = .05$$\n",
+    "\n",
+    "<center>Our $\\alpha$ is 0.05, meaning we are looking for a 95% confidence interval.<center>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "import pandas as pd\n",
+    "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style>\n",
+       "    .dataframe thead tr:only-child th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: left;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>31.62223931</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>32.821376</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>30.229101</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>31.413766</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>39.010550</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>34.822079</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   31.62223931\n",
+       "0    32.821376\n",
+       "1    30.229101\n",
+       "2    31.413766\n",
+       "3    39.010550\n",
+       "4    34.822079"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "os.system(\"curl -O https://raw.githubusercontent.com/fedhere/PUI2017_fb55/master/Lab3_fb55/times.txt\")\n",
+    "data = pd.read_csv(\"times.txt\")\n",
+    "data.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[34.494888176969695]\n"
+     ]
+    },
+    {
+     "ename": "TypeError",
+     "evalue": "unsupported operand type(s) for -: 'int' and 'list'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-25-f8c8ad5ba518>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[0;32mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmu_1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[0mse\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mstd\u001b[0m \u001b[0;34m/\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msqrt\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdata\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 8\u001b[0;31m \u001b[0mz\u001b[0m \u001b[0;34m=\u001b[0m  \u001b[0;34m(\u001b[0m\u001b[0mmu_2\u001b[0m \u001b[0;34m-\u001b[0m \u001b[0mmu_1\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m/\u001b[0m \u001b[0mse\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      9\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     10\u001b[0m \u001b[0malpha\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m0.05\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mTypeError\u001b[0m: unsupported operand type(s) for -: 'int' and 'list'"
+     ]
+    }
+   ],
+   "source": [
+    "mu_1 = np.mean(data).tolist()\n",
+    "std = np.std(data).tolist()\n",
+    "\n",
+    "mu_2 = 25\n",
+    "\n",
+    "print(mu_1)\n",
+    "se = std / np.sqrt(len(data))\n",
+    "z =  (mu_2 - mu_1) / se\n",
+    "\n",
+    "alpha = 0.05\n",
+    "\n",
+    "if z >= alpha:\n",
+    "    print(\"Insignificant. Do not reject the null hypothesis.\")\n",
+    "    print(\"P value = \" + str(z))\n",
+    "    print(\"P value > 0.05\")\n",
+    "else:\n",
+    "    print(\"Significant. Reject the null hypothesis.\")\n",
+    "    print(\"P value = \" + str(z))\n",
+    "    print(\"P value < 0.05\")"
    ]
   },
   {
@@ -29,9 +166,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "data = os.system(\"curl -0 https://raw.githubusercontent.com/fedhere/PUI2017_fb55/HW3/branch/filename\")"
-   ]
+   "source": []
   }
  ],
  "metadata": {
