--- a/HW5_sac820/Assignment2.ipynb
+++ b/HW5_sac820/Assignment2.ipynb
@@ -53,7 +53,6 @@
      "end_time": "2017-10-10T21:48:09.001664",
      "start_time": "2017-10-10T21:48:08.974753"
     },
-    "collapsed": false,
     "run_control": {
      "frozen": false,
      "read_only": false
@@ -150,7 +149,6 @@
      "end_time": "2017-10-10T21:48:13.225060",
      "start_time": "2017-10-10T21:48:13.212218"
     },
-    "collapsed": false,
     "run_control": {
      "frozen": false,
      "read_only": false
@@ -211,7 +209,6 @@
      "end_time": "2017-10-10T21:59:28.429463",
      "start_time": "2017-10-10T21:59:27.367385"
     },
-    "collapsed": false,
     "run_control": {
      "frozen": false,
      "read_only": false
@@ -387,7 +384,6 @@
      "end_time": "2017-10-10T21:59:32.658546",
      "start_time": "2017-10-10T21:59:32.650312"
     },
-    "collapsed": false,
     "run_control": {
      "frozen": false,
      "read_only": false
@@ -427,7 +423,6 @@
      "end_time": "2017-10-10T22:05:38.562573",
      "start_time": "2017-10-10T22:05:38.546516"
     },
-    "collapsed": false,
     "run_control": {
      "frozen": false,
      "read_only": false
@@ -492,7 +487,6 @@
      "end_time": "2017-10-10T22:36:14.319175",
      "start_time": "2017-10-10T22:36:14.148194"
     },
-    "collapsed": false,
     "hide_input": true,
     "run_control": {
      "frozen": false,
@@ -557,7 +551,6 @@
      "end_time": "2017-10-10T22:36:16.445603",
      "start_time": "2017-10-10T22:36:15.641033"
     },
-    "collapsed": false,
     "hide_input": true,
     "run_control": {
      "frozen": false,
@@ -640,7 +633,6 @@
      "end_time": "2017-10-10T22:37:13.234053",
      "start_time": "2017-10-10T22:37:12.370643"
     },
-    "collapsed": false,
     "run_control": {
      "frozen": false,
      "read_only": false
@@ -729,21 +721,21 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "PUI2016_Python3",
+   "display_name": "Python 2",
    "language": "python",
-   "name": "pui2016_python3"
+   "name": "python2"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 3
+    "version": 2
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.5.4"
+   "pygments_lexer": "ipython2",
+   "version": "2.7.14"
   },
   "latex_envs": {
    "LaTeX_envs_menu_present": true,
@@ -782,5 +774,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 0
+ "nbformat_minor": 1
 }
